Tue Mar 26 19:33:03 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Don't change the topic if olod topic is same as new one.
	  Affected file is silcd/packet_receive.c.

Mon Mar 25 21:11:35 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added cross-reference support to the SILC Documentation
	  generator.  All types across all HTML files are now cross-
	  referenced.  Affected files util/robodoc/generator.c and
	  scripts/silcdoc/silcdoc.

	* Added file lib/silcutil/silctypes.h to include all the
	  arithmetic type definitions and some macros.  Removed
	  includes/bitmove.h and moved macros to silctypes.h.

Mon Mar 25 17:19:46 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Merged bugfixes for Irssi SILC client from irssi.org CVS.

Sun Mar 24 11:21:04 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added `type' argument to silc_id_payload_parse_id function which
	  now returns the type of the ID to the sent pointer.  Affected
	  file is lib/silccore/silcid.[ch].

	* Added check for CMODE_CHANGE notify type that mode change is
	  allowed by the sender.  Affected file silcd/packet_receive.c.

	* Added check for CUMODE_CHANGE notify type that mode change is
	  allowed by the sender.  Affected file silcd/packet_receive.c.
	  Added the ID type as CUMODE_CHANGE notify type as argument
	  to the `notify' client operation.  Affected files are
	  lib/silcclient/client_notify.c, irssi/src/silc/core/client_ops.c.

	* Added function silc_client_add_server to the client library.
	  Added support for resolving also channel and server info when
	  received unknown entity in notify packet.  Affected files are
	  lib/silcclient/idlist.[ch], lib/silcclient/client_notify.c.

	* Added function silc_command_get_status to return the command
	  status from the command reply's argument payload.  Affected files
	  are lib/silccore/silccommand.[ch].

	* Added check for KICKED notify type that the kicking is
	  allowed by the client.  Affected file silcd/packet_receive.c.
